openshift-ai/model-hosting/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: llm-serving
  labels:
    opendatahub.io/dashboard: "true"
spec: {}
